Alignment issues corrected

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -151,7 +151,7 @@ input[type=text],
 .main2 img {
     width: 30px;
     height: 30px;
-    text-align: center;
+    text-align: left;
 
 }
 
